k8s/base/namespace.yml
apiVersion: v1 
kind: Namespace
metadata:
  name: myapp   
  labels:
    istio-injection: disabled
