k8s/base/service.yml
apiVersion: v1 
kind: Service 
metadata:
  name: service
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8282
